--- a/Finetuning_Llama.ipynb
+++ b/Finetuning_Llama.ipynb
@@ -5607,7 +5607,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              " View project at <a href='https://wandb.ai/somefromspace-some/huggingface' target=\"_blank\">https://wandb.ai/somefromspace-some/huggingface</a>"
+              " View project at <a href='https://wandb.ai/mywandb/huggingface' target=\"_blank\">https://wandb.ai/mywandb/huggingface</a>"
             ]
           },
           "metadata": {}
@@ -5619,7 +5619,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              " View run at <a href='https://wandb.ai/somefromspace-some/huggingface/runs/exl2ta0h' target=\"_blank\">https://wandb.ai/somefromspace-some/huggingface/runs/exl2ta0h</a>"
+              " View run at <a href='https://wandb.ai/mywandb/huggingface/runs/exl2ta0h' target=\"_blank\">https://wandb.ai/mywandb/huggingface/runs/exl2ta0h</a>"
             ]
           },
           "metadata": {}
